Fixed article review z-index stickyError bug and abstract text wrapping

--- a/app/styles/ReviewArticle.scss
+++ b/app/styles/ReviewArticle.scss
@@ -47,6 +47,10 @@
     width: 100%;
     .firstBorder, .secondBorder, .reviewContent {
         display: table-cell;
+
+        .abstractReview {
+            word-break: break-word;
+        }
     }
     .firstBorder, .secondBorder {
 
